# FirstPractice

./: CMakeLists.txt  README.md  main.cpp
src/: regex.cpp  regex.h  solution.cpp  solution.h
tests/: test_1.cpp
